--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -9,13 +9,14 @@
     tools:context=".module.history.view.History"
     tools:showIn="@layout/activity_dashboard">
 
+    <include layout="@layout/item_user_list_header"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_dashboard_rv_user"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
-        app:layoutManager="GridLayoutManager"
-        app:spanCount="2"
+        app:layoutManager="LinearLayoutManager"
         tools:context=".module.dashboard.view.Dashboard"
         tools:listitem="@layout/item_user_list"
         />
