--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,1 +1,8 @@
-<resources></resources>
+<resources>
+
+    <style name="CancelButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:colorButtonNormal">#c62828</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+</resources>
