--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,9 @@
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
+    <style name="CancelButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">#c62828</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
